# notes

./: Makefile  README.md
Makefile/: Makefile  Makefile_1  Makefile_2  Makefile_3  Makefile_4  makefile.md
Makefile/tt/: Makefile  Makefile.rule
Makefile/tt/apps/: Makefile
Makefile/tt/apps/app1/: Makefile  main.c
Makefile/tt/apps/app2/: Makefile  main.c
Makefile/tt/include/: test.h
Makefile/tt/include/modlue1/: m1-a.h  m1-b.h  m1-c.h
Makefile/tt/include/modlue2/: m2-a.h  m2-b.h  m2-c.h
Makefile/tt/include/modlue3/: m3-a.h  m3-b.h  m3-c.h
Makefile/tt/src/: Makefile  test.c
Makefile/tt/src/modlue1/: Makefile  m1-a.c  m1-b.c  m1-c.c
Makefile/tt/src/modlue2/: Makefile  m2-a.c  m2-b.c  m2-c.c
Makefile/tt/src/modlue3/: Makefile  m3-a.c  m3-b.c  m3-c.c
codelib/algorithm/: FibonacciSearch.c  ac-bm.c  ac-bm.h  bf.c  bm.c  chainListReverse.c  kmp.c  readme.txt  sort.c  tags
codelib/algorithm/bloom-filter/: bloom_filter.h
codelib/algorithm/hash/: MurmurHash3.c  hash.h  readme.txt
codelib/code-debug/: rdtsc.c  readme.txt  tags
codelib/code-debug/dump-stack/: debug.c  debug.h  tags
codelib/code-debug/errmsg/: errors.c  errors.h
codelib/code-debug/memleak/: memleak.c  memleak.h  tags  test  test.c
codelib/code-debug/unit-test/: tags  util-unittest.c  util-unittest.h
codelib/color/: color.h
codelib/common/: common.c  common.h
codelib/config/: Makefile  Makefile.in  config.h.in  config.h.in~  configure  configure.ac  libconfig.c  libconfig.h  tags
codelib/config/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
codelib/config/json/: json_config.c
codelib/config/src/: Makefile.am  Makefile.am.bak  Makefile.in  libconfig.c  libconfig.h
codelib/config/src/ini/: Makefile.am  Makefile.am.bak  Makefile.in  ini_config.c  iniparser.c
codelib/config/src/ini/.deps/: libini_a-dictionary.Po  libini_a-ini_config.Po  libini_a-iniparser.Po
codelib/config/src/json/: Makefile.am  Makefile.am.bak  Makefile.in  json_config.c
codelib/config/src/json/.deps/: libcjson_a-cJSON.Po  libcjson_a-json_config.Po
codelib/config/src/lua/: Makefile.am  Makefile.am-noinst  Makefile.in  lua_c.c  lua_c.h  lua_config.c  lua_doc.txt  tags  test_lua
codelib/config/src/lua/.deps/: libllua_a-lua_config.Po  libllua_a-luatables.Po
codelib/config/src/lua/lua_c++/: Makefile  Makefile.am  Makefile.in  lua_config.cc  tags
codelib/config/test/: Makefile.am  Makefile.am.bak  Makefile.am.uninst  Makefile.in  config.lua  example.ini  example.lua  test.json  test_ini.c  test_json.c  test_libconfig.c  test_lua.c
codelib/datastructure/: readme.txt
codelib/datastructure/base/: chainlist  chainlist.c  chainlist.h  graph  graph.c  graph.h  linearlist  linearlist.c  linearlist.h  queue  queue.c  queue.h  stack  stack.c  stack.h  tags  tree  tree.c  tree.h
codelib/datastructure/bitset/: bitset.h  test.c
codelib/datastructure/hashmap/: hashmap.c  hashmap.h  tags  test
codelib/datastructure/hashmap/hash2/: hash.c  hash.h  tags
codelib/datastructure/list/1/: list.c  list.h  tags
codelib/datastructure/list/2/: list.h
codelib/datastructure/pool/: tags  util-pool-thread.c  util-pool-thread.h  util-pool.c  util-pool.h
codelib/datastructure/queue/: queue.c  queue.h  tags
codelib/datastructure/queue/2/: queue.h  tags
codelib/datastructure/queue/3/: Makefile  readme.txt  rte_ring.c  rte_ring.h  test.c
codelib/datastructure/ringbuffer/: ringbuffer.c  ringbuffer.h
codelib/datastructure/timer/min-heap-timer/: min_heap_timer.c  min_heap_timer.h  tags
codelib/datastructure/tree/rbtree/: rbtree.c  rbtree.h  tags
codelib/encoding/: base64.c  base64.h  readme.txt  tags
codelib/encryption/: encryption.c  readme.txt
codelib/file/: lockfile.h  rw.c
codelib/ipc/: Makefile.module  ipc.h  mq_posix.c  mq_sysv.c  netlink.c  netlink_driver.c  sem.c  shm.c  tags  test.c  unix_socket.c
codelib/libtools/libestmp/: send_mail.c
codelib/libtools/libmysql/: mysql_op.c  mysql_op.h  tags
codelib/lock+atomic/: atomic.h  rwlock.h  spinlock.h  tags
codelib/log/: log.c  log.h  tags
codelib/log/SimpleLog/: log.c  log.h  tags
codelib/log/SimpleLog/test/: example.c  module1.c  module1.h  module2.c  module2.h
codelib/log/log/: log.c  log.h
codelib/socket/: c  s  skt.c  skt.h  tags  test_client.c  test_server.c
shell/: c_to_txt.sh  txt_to_c.sh
shell/encrypt-and-decrypt-file/: genrsa.pri  readme  rsa.pub
shell/encrypt-and-decrypt-file/openssl_rsautl_ende/: decrypt_pub.sh  encrypt_pri.sh
shell/encrypt-and-decrypt-file/openssl_rsautl_sign_verify/: decrypt_verify.sh  encrypt_sign.sh
shell/encrypt-and-decrypt-file/user_key/: decrypt.sh  encrypt.sh  user.key
vim_config/: vimrc
